Removed applicationContext.xml in favor of annotations.